terraform/alb.tf
resource "aws_lb" "app_alb" {
  name               = "file-upload-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]

  subnets = [
    aws_subnet.public_a.id,
    aws_subnet.public_b.id
  ]

  tags = {
    Name = "file-upload-alb"
  }
}
